[gd_scene load_steps=2 format=2]

[ext_resource path="res://PlayerList.gd" type="Script" id=1]

[node name="PlayerList" type="PanelContainer"]
margin_right = 598.0
margin_bottom = 476.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 591.0
margin_bottom = 469.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 282.0
margin_bottom = 462.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 282.0
margin_bottom = 14.0
text = "Waiting for players..."

[node name="JoinedList" type="ItemList" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 282.0
margin_bottom = 226.0
size_flags_vertical = 3

[node name="ReadyList" type="ItemList" parent="HBoxContainer/VBoxContainer"]
margin_top = 230.0
margin_right = 282.0
margin_bottom = 438.0
size_flags_vertical = 3

[node name="ReadyButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 442.0
margin_right = 282.0
margin_bottom = 462.0
text = "READY!"

[node name="StartButton" type="Button" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 442.0
margin_right = 282.0
margin_bottom = 462.0
disabled = true
text = "Start Game"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 286.0
margin_right = 290.0
margin_bottom = 462.0

[node name="ColorPicker" type="ColorPicker" parent="HBoxContainer"]
margin_left = 294.0
margin_right = 584.0
margin_bottom = 462.0
edit_alpha = false
